--- a/AngularJs/index.html
+++ b/AngularJs/index.html
@@ -5,9 +5,9 @@
     <title></title>
     <script src="Scripts/angular.min.js"></script>
     <script src="Scripts/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular-route.min.js"></script>
     <link href="styles.css" rel="stylesheet" />
     <script src="Scripts/script.js"></script>
+    <base href="/" />
 </head>
 <body>
     <table style="font-family: Arial">
@@ -20,9 +20,9 @@
         </tr>
         <tr>
             <td class="leftMenu">
-                <a href="#/home">Home</a>
-                <a href="#/courses">Courses</a>
-                <a href="#/students">Students</a>
+                <a href="Templates/home.html">Home</a>
+                <a href="Templates/courses.html">Courses</a>
+                <a href="Templates/students.html">Students</a>
             </td>
             <td class="mainContent">
                 <ng-view></ng-view>
